Revert "MET-4975 Change Retryable annotations and RetryableMethodExecutor handling in authorization package to make testing faster"
This reverts commit 8fea0e4367937a10216de8014d05644240aa0d14.